# codebase_dump

./: README.md  concat_files.py  pyproject.toml
src/projdmp/: __main__.py
