[project]
name = "projdmp"
version = "1.0.1"
description = "CLI for dumping a code project to Markdown."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pathspec>=1.1.1",
    "rich>=15.0.0",
]

[project.scripts]
projdmp = "projdmp.__main__:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12"]
build-backend = "uv_build"